# simple_cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
